Changelog of Jail

Alpha0.3.0
- Added JailAPI.php, as an interface of Jail's API
- Code cleanup
- Fixed newly joined players all being jailed bug #10
- Fixed console popping errors of isJailed() bug #10
- Bumped to PocketMine API 3.0.0-ALPHA1 (Older APIs compatible)
- Updated README.md, removing known bug 'GUI not showing'
- Added support for EconomyPlus (Prisoner bail function)

Alpha0.2.3
- Fixed '/votejail' command not working for normal players
- Added 'jail.uuidcheck.bypass' permission

Alpha0.2.2
- Added an option to disable timer GUI on prisoners in config
- Updated README.md for Github
- Added '/votejail' cmd, allowing players to vote someone who behaves badly
- Fixed loading message of compatible economy plugin
- Fixed /tpjail command and tpJail() not working
- Code cleanup
- Added UUID Checker

Alpha0.2.1
- Added Russian #5
- Redefined language keys
- Added more translatable messages

Alpha0.2
- Added more languages #2
- Various bug fixes

Alpha0.1.1
- Added some missing PHPDoc
- Removed unused code
- Resolved mobile incompatibility to update checker
- Resolved internet connectivity issue to update checker

Alpha0.1
- Hugely improved and enhanced auto update checker/installer (config)
- Implemented bail support for PocketMoney
- Added an option to disable bail
- Fixed some typos
- Implemented bail money requirement on prisoner's GUI
- Fixed server crash when player is jailed infinitely

Pre-alpha0.7
- Added basic version update fetcher

Pre-alpha0.6
- Fixed license text incorrect plugin name
- Added op being jailed prevention (Can be deactivated in config)
- Added basic bail feature, currently only supports EconomyS (/bail)

Pre-alpha0.5
- Fixed infinite time jailing pops errors on console screen
- Fixed players infinite time still receive time penalty

Pre-alpha0.4
- Fixed auto timer unjailing not taking effect (CRITICAL)

Pre-alpha0.3
- Fixed error code appearing when new players join
- Fixed some missing PHP Docs of API