@@ -49,5 +49,6 @@
 	"timer.broadcast.bail": "保釋",
 	"timer.broadcast.notallowed": "不允許",
 	"timer.broadcast.disabled": "停用",
-	"join.uuid.rejected.kickmsg": "&c&b[JAIL&c]\n&eYour UUID is duplicated with a jailed player"
+	"join.uuid.rejected.kickmsg": "&c&b[JAIL&c]\n&eYour UUID is duplicated with a jailed player",
+	"setjail.bail.value": "&eAllow bail: &6%bail%"
 }
